--- a/styles/program_highlights.css
+++ b/styles/program_highlights.css
@@ -22,6 +22,9 @@
 /* Card Flip Effect */
 .boxes {
     perspective: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .card {
@@ -32,6 +35,7 @@
     transition: transform 0.6s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
+    max-width: 500px;
     overflow: hidden;
     margin: 20px 0;
 }
