--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,6 @@ body {
 
 }
 
-
 .navbar{
     width: 100%;
     padding: 0 15px;
@@ -170,15 +169,6 @@ body {
     justify-content: center;
 }
 
-.glyphicon,
-.sr-only,
-.banner,
-.carousel-control,
-.carousel-inner,
-.banner-carousel {
-    background: none; /* Removes any background color */
-}
-
 .banner-carousel {
     overflow: hidden;
     white-space: nowrap;
@@ -212,7 +202,7 @@ body {
         font-size: 1rem;
     }
 }
-  
+ 
   /* Footer Styling */
   .footer {
     background-color: #004080;
@@ -234,6 +224,7 @@ body {
     margin: auto;
     margin-top: 50px;
 }
+
 .form-header {
     text-align: center;
     font-size: 20px;
@@ -268,6 +259,7 @@ body {
     text-decoration: none;
     border-right: 1px solid #fff;
 }
+
 .tabs a:last-child {
     border-right: none;
 }
@@ -281,6 +273,7 @@ body {
     background-color: #fff;
     margin-top: 20px;
 }
+
 .content-box h4 {
     font-weight: bold;
     color: #003d7a;
@@ -334,18 +327,6 @@ body {
     padding-top: 40px; /* Adds space to accommodate the heading */
 }
 
-/* Ensure Heading is Fixed at the Top */
-#specilizations_offered h2 {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 10; /* Makes sure the heading is above the cards */
-    font-size: 2rem; /* Adjust heading size */
-    color: #333;
-    text-align: center;
-    padding-top: 10px;
-}
-
 /* Specialization Cards Container */
 .card-container {
     position: relative;
@@ -363,10 +344,11 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 0 0 20px 0;
+    transform: translateY(100px);
     padding: 20px;
     text-align: center;
     opacity: 0;
-    transition: transform 1.5s ease, opacity 1.5s ease;
+    transition: transform 3s ease, opacity 2s ease;
     min-width: 200px;
     width: 300px; /* Adjust card width */
     height: 100px;
@@ -375,8 +357,8 @@ body {
 
 /* Active Card - When Entering the View */
 .specializations.active {
+    transform: translateY(0px);
     position: relative;
-    transform: translateZ(0); /* Bring card closer to the screen */
     opacity: 1;
 }
 
